tests/typechecking/correct/locvar.spl
Int f(Int a) {
	Int b = a;
	return b;
}

Bool g(Int a, Int b) {
	Int c = a;
	Int d = b;
	return c < d;
}

Void h(Int a, Int b) {
	Int e = 1;
	return;
}
