tests/typechecking/fail/wrongoperatortype.spl
Int main()
{
	Int a = 1+'b';
	Int b = 'a'*'c';
	Bool c = 'a' == 1;
	return 1;
}
